@@ -35,3 +35,5 @@ Adjust Grave Robber rolling algorithm.
 Added some Antique clothing items.
 Fixed hardy regeneration allowing for infinite sprinting. (Thank you Xenu)
 Fixed GymGoer applying to all Fitness XP and not exclusively Exercise.
+Fix Thick Blooded giving too much HP restoration.
+Fix Floating Point values through code where decimals greater than four places (LuaJava returns Doubles to Java if more than four decimals, which breaks code in PZ where expected type is float)
